--- a/templates/core/footer.html
+++ b/templates/core/footer.html
@@ -1,4 +1,10 @@
     </div>
+    <div class="footer">
+      ©2014 COPISTERIA COLOR DIGITAL
+      <br>
+      <a href="controlador.php?accion=legal&id=1">legal</a>
+    </div>
+
     <script type="text/javascript">
       function botonmenu() {
         var navbar = document.getElementById("navigation-bar");
