--- a/templates/core/header.html
+++ b/templates/core/header.html
@@ -18,7 +18,7 @@
   <div id="navigation-bar" class="navigation-bar">
     <ul>
       <li class="navbaritems-left ##index##"><a href="controlador.php?accion=index&id=1">home</a></li>
-      <li class="navbaritems-left ##catalogo##"><a href="controlador.php?accion=catalogo&id=1">catalogo</a></li>
+      <li class="navbaritems-left ##catalogo##"><a href="controlador.php?accion=catalogo&id=1">catálogo</a></li>
       <li class="navbaritems-left ##localizacion##"><a href="controlador.php?accion=localizacion&id=1">localización</a></li>
       <li class="navbaritems-left ##servicios##"><a href="controlador.php?accion=servicios&id=1">servicios</a></li>
       <li class="navbaritems-right"><a href='##linklogin##'>##loginuser##</a></li>
