--- a/templates/localizacion.html
+++ b/templates/localizacion.html
@@ -15,6 +15,6 @@
   </ul>
   <form class="" action="controlador.php?accion=localizacion&id=1" method="post">
     <textarea name="contacto" placeholder="Envianos tus comentarios!" rows="10" cols="30"></textarea><br>
-    <input type="submit" onclick="alert('Enviado!')" value="Enviar" />
+    <input type="submit" class="botonesbonitos" onclick="alert('Enviado!')" value="Enviar" />
   </form>
 </div>
