--- a/templates/registro.html
+++ b/templates/registro.html
@@ -28,7 +28,7 @@
        <br>
        <input type="text" name="nombre" placeholder="Nombre">
        <br>
-       <input type="submit" name="submit" value="Registrar">
+       <input type="submit" class="botonesbonitos botonesanchos" name="submit" value="Registrar">
 </form>
 
 <div class="onlymobile">
