--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
        <br>
        <input type="password" name="password" id="pass1" placeholder="Contraseña">
        <br>
-       <input type="submit" name="submit" value="Log in">
+       <input type="submit" class="botonesbonitos botonesanchos" name="submit" value="Log in">
 </form>
 <div class="onlymobile">
     <a href="controlador.php?accion=registro&id=1"> O registrate</a>
