--- a/templates/producto.html
+++ b/templates/producto.html
@@ -1,5 +1,32 @@
-<h1>##idproducto##</h1>
+<h1 id="idprod">##idproducto##</h1>
 <img src="http://placehold.it/350x150" alt="imagen">
 <h2>Descripción</h2>
 <p>##descripcion##</p>
 <h2>##precio##€</h2>
+
+##parausuarios##
+
+<button type="button" id="botonfav" name="button" onclick="favoritos()">Añadir a favoritos</button>
+<div id="correcto" class="alert-box success">Guardado como favorito</div>
+<div id="error" class="alert-box failure">Algo ha fallado</div>
+<script type="text/javascript" src="/static/js/jquery-3.2.0.min.js"></script>
+<script type="text/javascript">
+  function favoritos() {
+    idprod = $('#idprod').text();
+    $.ajax({
+      url: "favoritos.php?idprod=" + idprod,
+      success: function(response) {
+        if (response == "1") {
+          $( "#correcto" ).fadeIn( 300 ).delay( 1500 ).fadeOut( 400 );
+        }
+        else {
+          $( "#error" ).fadeIn( 300 ).delay( 1500 ).fadeOut( 400 );
+        }
+
+      }
+    });
+  }
+</script>
+
+
+##parausuarios##
