--- a/templates/catalogo.html
+++ b/templates/catalogo.html
@@ -36,11 +36,16 @@
 						$("#botoncargamas").show();
 					}
 					var datos = total[1];
-  				var cadena = "<table><tr><th>ref.</th><th>descripción</th><th>categoria</th></tr>";
+					cadena = "<div id='correcto' class='alert-box success'>Guardado como favorito</div>";
+					cadena = cadena + "<div id='error' class='alert-box failure'>Algo ha fallado</div>";
+  				var cadena = cadena + "<table><tr><th>ref.</th><th>descripción</th><th>categoria</th></tr>";
   				for (var i = 0; i < datos.length; i ++) {
   						cadena = cadena + "<tr><td><a href='controlador.php?accion=producto&id=1&producto=" + datos[i][0] + "'>" + datos[i][0] +"</a></td>";
               cadena = cadena + "<td>" + datos[i][1] + "</td>";
-              cadena = cadena + "<td>" + datos[i][2] + "</td></tr>";
+              cadena = cadena + "<td>" + datos[i][2] + "</td>";
+							cadena = cadena + "##parausuarios##<td><button type='button' id='botonfav' name='button' onclick='favoritos("+ datos[i][0] +")'>Añadir a favoritos</button></td>##parausuarios##</tr>";
+
+
   				}
 					cadena = cadena + "</table>";
   				$("#resultado").html(cadena);
