--- a/templates/core/footer.html
+++ b/templates/core/footer.html
@@ -4,7 +4,29 @@
       <br>
       <a href="controlador.php?accion=legal&id=1">legal</a>
     </div>
+    ##scriptparausuarios##
+    <script type="text/javascript" src="/static/js/jquery-3.2.0.min.js"></script>
+    <script type="text/javascript">
+      idprod = $('#idprod').text();
+      function favoritos() {
+        favoritos(idprod);
+      }
+      function favoritos(idprod) {
+        $.ajax({
+          url: "favoritos.php?idprod=" + idprod,
+          success: function(response) {
+            if (response == "1") {
+              $( "#correcto" ).fadeIn( 300 ).delay( 1500 ).fadeOut( 400 );
+            }
+            else {
+              $( "#error" ).fadeIn( 300 ).delay( 1500 ).fadeOut( 400 );
+            }
 
+          }
+        });
+      }
+    </script>
+    ##scriptparausuarios##
     <script type="text/javascript">
       function botonmenu() {
         var navbar = document.getElementById("navigation-bar");
