--- a/templates/producto.html
+++ b/templates/producto.html
@@ -6,7 +6,7 @@
 
 ##parausuarios##
 
-<button type="button" id="botonfav" name="button" onclick="favoritos()">Añadir a favoritos</button>
+<button type="button" class="botonesbonitos" name="button" onclick="favoritos()">Añadir a favoritos</button>
 <div id="correcto" class="alert-box success">Guardado como favorito</div>
 <div id="error" class="alert-box failure">Algo ha fallado</div>
 
