--- a/templates/catalogo.html
+++ b/templates/catalogo.html
@@ -43,7 +43,7 @@
   						cadena = cadena + "<tr><td><a href='controlador.php?accion=producto&id=1&producto=" + datos[i][0] + "'>" + datos[i][0] +"</a></td>";
               cadena = cadena + "<td>" + datos[i][1] + "</td>";
               cadena = cadena + "<td>" + datos[i][2] + "</td>";
-							cadena = cadena + "##parausuarios##<td><button type='button' id='botonfav' name='button' onclick='favoritos("+ datos[i][0] +")'>Añadir a favoritos</button></td>##parausuarios##</tr>";
+							cadena = cadena + "##parausuarios##<td><button type='button' class='botonesbonitos' name='button' onclick='favoritos("+ datos[i][0] +")'>Añadir a favoritos</button></td>##parausuarios##</tr>";
 
 
   				}
