--- a/templates/user.html
+++ b/templates/user.html
@@ -3,3 +3,4 @@
   ##productos##
 </div>
 ##admin##
+<button id="botongenerarpdf" class="botonesbonitos" type="button" name="button" href="../pdf.php" >Generar PDF con favoritos</button>
