arreglados un par de errores en lo del pdf, sigue sin funcionar

--- a/templates/user.html
+++ b/templates/user.html
@@ -3,4 +3,4 @@
   ##productos##
 </div>
 ##admin##
-<button id="botongenerarpdf" class="botonesbonitos" type="button" name="button" href="../pdf.php" >Generar PDF con favoritos</button>
+<a href="pdf.php"><button id="botongenerarpdf" class="botonesbonitos" type="button" name="button"  >Generar PDF con favoritos</button></a>
