--- a/templates/user.html
+++ b/templates/user.html
@@ -3,4 +3,4 @@
   ##productos##
 </div>
 ##admin##
-<a href="pdf.php"><button id="botongenerarpdf" class="botonesbonitos" type="button" name="button"  >Generar PDF con favoritos</button></a>
+<a target="_blank" href="pdf.php"><button id="botongenerarpdf" class="botonesbonitos" type="button" name="button"  >Generar PDF con favoritos</button></a>
