--- a/static/css/style.css
+++ b/static/css/style.css
@@ -263,12 +263,16 @@ html, body {
 
 .tablaproductos table {
   width: 100%;
-  border-spacing: 5px;
+  border-spacing: 0;
 }
 
 .tablaproductos th, td {
   padding: 5px 15px;
   text-align: center;
+}
+
+.tablaproductos tr:nth-child(even) {
+  background-color: rgba(200, 200, 200, 0.5);
 }
 
 #cuentaresultados {
