--- a/templates/catalogo.html
+++ b/templates/catalogo.html
@@ -44,7 +44,7 @@
 					if (datos[i][3] == "0")
 						cadena = cadena + "<img src=http://placehold.it/100x80></a></td>";
 					else
-						cadena = cadena + "<img src=/static/images/catalogo/" + datos[i][3] + "></a></td>";
+						cadena = cadena + "<img src=/static/images/catalogo/" + datos[i][3] + " height='80px'></a></td>";
 						cadena = cadena + "<td>" + datos[i][1] + "</td>";
 						cadena = cadena + "<td>" + datos[i][2] + "</td>";
 						cadena = cadena + "##parausuarios##<td><button type='button' class='botonesbonitos' name='button' onclick='favoritos(" + datos[i][0] + ")'>Añadir a favoritos</button></td>##parausuarios##</tr>";
