--- a/templates/producto.html
+++ b/templates/producto.html
@@ -1,5 +1,5 @@
 <h1 id="idprod">##idproducto##</h1>
-<img src="http://placehold.it/350x150" alt="imagen">
+<img src="##imagen##" alt="imagen">
 <h2>Descripción</h2>
 <p>##descripcion##</p>
 <h2>##precio##€</h2>
