--- a/static/css/style.css
+++ b/static/css/style.css
@@ -512,3 +512,23 @@ html, body {
     float: right;
   }
 }
+/*****************************/
+/**********Dropzone***********/
+/*****************************/
+.container{
+ margin: 0 auto;
+ width: 50%;
+}
+
+.content{
+ padding: 5px;
+ margin: 0 auto;
+}
+.content span{
+ width: 250px;
+}
+
+.dz-message{
+ text-align: center;
+ font-size: 28px;
+}
