css a usuario, cambiado el selector de añadir producto para que enseñe los nombres de la tabla

--- a/templates/user.html
+++ b/templates/user.html
@@ -1,6 +1,8 @@
-<h1>Tus favoritos:</h1>
-<div class="">
-  ##productos##
-</div>
 ##admin##
-<a target="_blank" href="pdf.php"><button id="botongenerarpdf" class="botonesbonitos" type="button" name="button"  >Generar PDF con favoritos</button></a>
+<div class="">
+     <h1>Tus favoritos:</h1>
+     <div class="">
+       ##productos##
+     </div>
+     ##botonpdf##
+</div>
