--- a/templates/nuevo.html
+++ b/templates/nuevo.html
@@ -1,26 +1,12 @@
-<!DOCTYPE html>
-<html>
-   <head>
-      <meta charset="utf-8">
-      <title>Nuevo Producto</title>
-   </head>
-   <body>
       <form class="" action="index.html" method="post">
          <label for="categoria">Categoria:</label> <br/>
          <select id="categoria" name="categoria">
            <option value="" selected="selected">Elige una categoria</option>
-           <?php
-           con = new mysqli("dbserver", "siw14", "eeshaekaip", "db_siw14");
-           $consulta = "select nombre from categoria";
-           $resultado = $con->query($consulta);
-           while ($opcion = $resultado->fetch_assoc()) {
-             echo <option value="$opcion["nombre"]">$opcion["nombre"]</option>;
-           }
-
-           ?>
+                ##selectorescategoria##
          </select>
-         Nombre:<br>
-         <input type="text" name="Nombre" placeholder="Nombre"/><br>
+         <br>
+         <label for="nombre">Nombre:</label> <br/>
+         <input type="text" id = "Nombre" name="Nombre" placeholder="Nombre"/><br>
          Dirección:<br>
          <input type="text" name="direccion" placeholder="Dirección"/><br>
          Población:<br>
@@ -35,5 +21,3 @@
             </form>
          </div>
       </div>
-   </body>
-</html>
