--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,6 +1,5 @@
 <div id="admin-navigation-bar" class="admin-navigation-bar">
-  <ul>
-    <li class="admin-navbaritems-left ##nuevo##"><a href="controlador.php?accion=nuevo&id=1">Añadir nuevo producto</a></li>
-    <li class="admin-navbaritems-left ##modificar##"><a href="controlador.php?accion=modificar&id=1">Modificar productos</a></li>
-  </ul>
+  <a href="controlador.php?accion=nuevo&id=1"><button class="botonesbonitos">Añadir nuevo producto</button></a>
+  <a href="controlador.php?accion=modificar&id=1"><button class="botonesbonitos">Modificar productos</button></a>
+
 </div>
